# languages

./: .gitignore  README.md  TODO.txt  index.html  pyproject.toml  youtube_videos.db
.cursor/: rules.json
.github/workflows/: static.yml
books/korean_folktales/v1/: a_bridegroom_for_miss_mole.html  a_bridegroom_for_miss_mole.md  a_frog_for_a_husband.html  a_frog_for_a_husband.md  catkin_and_the_queen_mother.html  catkin_and_the_queen_mother.md  east_light_and_the_bridge_of_fishes.html  east_light_and_the_bridge_of_fishes.md  fancha_and_the_magpie.html  fancha_and_the_magpie.md  index.html  index.md  longka_the_dancing_girl.html  longka_the_dancing_girl.md  old_timber_top.html  old_timber_top.md  old_white_whiskers_and_mr_bunny.html  old_white_whiskers_and_mr_bunny.md  prince_sandalwood_the_father_of_korea.html  prince_sandalwood_the_father_of_korea.md  shoes_for_hats.html  shoes_for_hats.md  sir_one_long_body_and_madam_thousand_feet.html  sir_one_long_body_and_madam_thousand_feet.md  the_great_stone_fire_eater.html  the_great_stone_fire_eater.md  the_king_of_the_flowers.html  (+21 more)
youtube_chat/: README.md  __init__.py  app.py  core.py  database.py  llms.py  pydantic_models.py  transcript_processor.py  youtube.py  youtube_processor.py
youtube_chat/agentic/: app_v2.py  context.py  segment_selection.py  starter.py  teacher.py  transcript_processing.py  triage.py
youtube_chat/agents/: __init__.py  agent.py  single_agent.py  video_processor.py
youtube_chat/llm_solution/: app.py  single_agent.py  video_processor.py
youtube_chat/services/: database.py  youtube.py
(+48 files in other folders)
